--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://rohith-2252.github.io/Career-Guidence/MyApp",
-  "name": "MyApp",
+  "homepage": "https://rohith-2252.github.io/Career-Guidence/",
+  "name": "myapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
